crates/swc_css_parser/tests/errors/rome/invalid/selector4/output.stderr
error: Invalid attribute matcher value
 --> $DIR/tests/errors/rome/invalid/selector4/input.css:1:14
  |
1 | .class[attr= {
  |              ^

